video aspect ratio and overflow fixed (should be0

--- a/src/CS_App.css
+++ b/src/CS_App.css
@@ -38,3 +38,9 @@ button:hover {
 .red {
   color: red;
 }
+
+.center-parent-container {
+  width: 100%;
+  justify-content: center;
+  display: flex;
+}
